fixed weird wrapping bug on staging

--- a/app/assets/stylesheets/partials/_content-posts.css.scss
+++ b/app/assets/stylesheets/partials/_content-posts.css.scss
@@ -201,7 +201,7 @@
 			margin-top: 3px;
 			a {
 				color: $white;
-				white-space: nowrap;
+				// white-space: nowrap;
 				
 				&.photo-upload-link {
 					padding-top: 10px;
